# claudecode

./: .gitignore  CLAUDE.md  sync.sh
octocoupon/: .env.example  .gitignore  CLAUDE.md  publish_offers.py  pyproject.toml  requirements.txt  test_connections.py
octocoupon/octocoupon/: __init__.py  __main__.py  catalog.py  cli.py  config.py  logger.py  pipeline.py  scheduler.py
octocoupon/octocoupon/affiliates/: __init__.py  base.py  cj.py  optimise.py  rakuten.py
octocoupon/octocoupon/content/: __init__.py  generator.py
octocoupon/octocoupon/db/: __init__.py  connection.py
octocoupon/octocoupon/publishers/: __init__.py  wordpress.py
octocoupon/octocoupon/publishers/social/: __init__.py  base.py  facebook.py  instagram.py  reddit.py  rednote.py  threads.py  twitter.py
