[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octocoupon"
version = "0.1.0"
description = "Affiliate content marketing automation for octocoupon.com"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "apscheduler>=3.10.4",
    "click>=8.1.7",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "praw>=7.7.1",
    "python-dotenv>=1.0.1",
    "tweepy>=4.14.0",
]

[project.scripts]
octocoupon = "octocoupon.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["octocoupon"]
